Flickr: cleanup descriptions