@@ -398,8 +398,8 @@ public abstract class AbstractAgencyFlickrService<OT extends Media<OID, OD>, OID
         for (FlickrMedia media : medias) {
             try {
                 Pair<FlickrMedia, Integer> result = processor.processFlickrMedia(media, flickrAccount,
-                        getOriginalRepository(), getStringsToRemove(), this::customProcessing, this::shouldUploadAuto,
-                        this::uploadWrapped);
+                        getOriginalRepository(), getStringsToRemove(media.getPathAlias()), this::customProcessing,
+                        this::shouldUploadAuto, this::uploadWrapped);
                 if (result.getValue() > 0) {
                     uploadedMedia.add(result.getKey());
                 }
@@ -430,9 +430,9 @@ public abstract class AbstractAgencyFlickrService<OT extends Media<OID, OD>, OID
         }
     }
 
-    protected Collection<String> getStringsToRemove() {
+    protected Collection<String> getStringsToRemove(String pathAlias) {
         // To be overriden if special strings have to be removed from description
-        return Collections.emptyList();
+        return List.of();
     }
 
     protected boolean customProcessing(FlickrMedia media) {
